Fix the bug related to the side  navigation disappearing while moving the screen on mobile

--- a/src/public/scss/_settings--overwrite.scss
+++ b/src/public/scss/_settings--overwrite.scss
@@ -725,7 +725,7 @@ $off-canvas-overlay-background: 0;
 $off-canvas-overlay-background-hover: 0; 
 
 // Transition Variables
-$menu-slide: "transform 100ms ease-in-out";
+$menu-slide: "transform 500ms ease-in-out";
 
 // Orbit
 
